Corrects minor typos

--- a/P1-LesBasesImperatives/CH7-LesConditions/Chapter.tex
+++ b/P1-LesBasesImperatives/CH7-LesConditions/Chapter.tex
@@ -8,7 +8,7 @@ Cependant, si b est nul, vous ne pouvez pas effectuer la division. (En fait en S
 
 On se propose de vérifier si b est nul et d'écrire un message à la console dans ce cas.
 
-Grâce aux sections précedentes vous pouvez me trouver le condition correspondante.
+Grâce au chapitre précédent, vous pouvez me trouver le condition correspondante.
 
 \pagebreak % No cheating
 \mintinline{swift}{b == 0}, comme vous avez tous trouvé (sans tricher).
@@ -35,7 +35,7 @@ dans un langage utilisant la syntaxe du C :}
 \item Les parenthèses autour de la condition ne sont pas nécessaires,
 et sont en général omise dans la doc d'Apple.
 \item Les accolades ne peuvent par contre pas être omise,
-même s'il n'y a qu'un instruction à exécuter.
+même s'il n'y a qu'une instruction à exécuter.
 \end{itemize}
 \subsection{Et dans le cas contraire ?}
 Évidement maintenenant que l'on  a testé la valeur de b, il faut n'exécuter la division que si b est non nul.
