Insert the splitted chapter into the complete document.

--- a/P1-LesBasesImperatives/Part.tex
+++ b/P1-LesBasesImperatives/Part.tex
@@ -9,5 +9,5 @@ fonctionnelle et acquérir les bases de l’algorithmie.
 %\input{\TSwiftRoot/P1-LesBasesImperatives/CH4-Arithmetique/Chapter}
 \input{\TSwiftRoot/P1-LesBasesImperatives/CH5-String/Chapter}
 \input{\TSwiftRoot/P1-LesBasesImperatives/CH6-LesBooleens/Chapter}
-%\input{\TSwiftRoot/P1-LesBasesImperatives/CH7-LesConditions/Chapter}
+\input{\TSwiftRoot/P1-LesBasesImperatives/CH7-LesConditions/Chapter}
 \input{\TSwiftRoot/P1-LesBasesImperatives/CH8-LesBoucles/Chapter}
