Minor fixes of document structure relative to front matter

--- a/TutorielSwift.tex
+++ b/TutorielSwift.tex
@@ -5,12 +5,12 @@
 \newcommand{\TSwiftRoot}[0]{.} % This command is used to make sure the sub inports don't fail in subfolders.
 
 \begin{document}
-
+\frontmatter
 \maketitle
 
-% Insert summary/intro here.
-\frontmatter
 \tableofcontents
+
+%TODO : Preface.
 
 \mainmatter
 \input{\TSwiftRoot/P1-LesBasesImperatives/Part}
