Split chapter 3 into Variables (CH3) and a Arthmetics(new CH4).

--- a/P1-LesBasesImperatives/Part.tex
+++ b/P1-LesBasesImperatives/Part.tex
@@ -6,7 +6,7 @@ fonctionnelle et acquérir les bases de l’algorithmie.
 \input{\TSwiftRoot/P1-LesBasesImperatives/CH1-AvantDeCommencer/Chapter}
 \input{\TSwiftRoot/P1-LesBasesImperatives/CH2-DecouvronsXCode/Chapter}
 \input{\TSwiftRoot/P1-LesBasesImperatives/CH3-LesVariables/Chapter}
-%\input{\TSwiftRoot/P1-LesBasesImperatives/CH4-Arithmetique/Chapter}
+\input{\TSwiftRoot/P1-LesBasesImperatives/CH4-Arithmetique/Chapter}
 \input{\TSwiftRoot/P1-LesBasesImperatives/CH5-String/Chapter}
 \input{\TSwiftRoot/P1-LesBasesImperatives/CH6-LesBooleens/Chapter}
 \input{\TSwiftRoot/P1-LesBasesImperatives/CH7-LesConditions/Chapter}
