Adds the licence.

--- a/Conf.tex
+++ b/Conf.tex
@@ -1,7 +1,8 @@
 %Configuration options.
 \documentclass[11pt,a4paper,oneside]{book}
 \usepackage[utf8]{inputenc}
-\usepackage[francais]{babel}
+\usepackage[french, english]{babel}
+\selectlanguage{french}
 \usepackage{fontspec} % Required by french.
 %\usepackage[T1]{fontenc}
 \usepackage{mathtools}
