--- a/TutorielSwift.tex
+++ b/TutorielSwift.tex
@@ -7,15 +7,32 @@
 \begin{document}
 \frontmatter
 \maketitle
+\begin{otherlanguage}{english}
+Copyright \copyright{}  2014---2015 Guillaume DIDIER.
 
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the GNU Free Documentation License, Version 1.3
+or any later version published by the Free Software Foundation;
+with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
+A copy of the license is included in the appendix entitled ``GNU
+Free Documentation License''.
+\end{otherlanguage}
+
+Il vous est donnée la permission de reproduire redistribuer et/ou modifier ce document selon les termes de la GNU Free Documentation Licence, Version 1.3 ou ultérieur, publiée par la Free Software Foundation; avec aucune section invariante, aucun texte de couverture et aucun text de quatrième de couverture.
+Un copie de cette licence est incluse dans l'appendice intitulé <<GNU Free Documentation License>>.
 \tableofcontents
 
 %TODO : Preface.
 
 \mainmatter
 \input{\TSwiftRoot/P1-LesBasesImperatives/Part}
-\backmatter
 
 \appendix
+\part*{Appendices}
+\phantomsection  % so hyperref creates bookmarks
+\addcontentsline{toc}{part}{Appendices}
+
+\input{License}
+\backmatter
 
 \end{document}
