Fixes a critical overfull box issue.

--- a/P1-LesBasesImperatives/CH4-Arithmetique/Chapter.tex
+++ b/P1-LesBasesImperatives/CH4-Arithmetique/Chapter.tex
@@ -133,13 +133,22 @@ Pour ceux qui connaissent un peu les maths, je vais ici vous donner la liste des
 Je ne détail pas toutes les fonctions, qui sont pour la plupart directement issue de celle disponible en C/C++.
 Si vous êtes intéréssés par certaines, une simple recherche Google (ou autre) avec le nom de la fonction vous fournira les détails.
 \begin{description}
-\item[ceil, floor, round, trunc :] Arrondis respectif, au nombre entier supérieur, inférier, le plus proche et vers 0. Prend un flottant (Double ou Float), et renvoie un nombre du \emph{même type}.
-\item[abs, fabs :] Cette bonne vieille fonction valeur absolue (Int et Double ou Float), renvoie un nombre positif égal à plus ou moins le paramètre en entrée.
-\item[sqrt, cbrt :] Racines carrée et cubique.
-\item[pow :] La fonction puissance, prend deux paramètre Double ou Float $x$ et $a$, et renvoie $x^{a}$. % Penser à faire un TP Opérateur **
-\item[exp, exp2, expm1 :] Exponentielles d'un Double ou d'un Float
-\item[log, log10, log1p, log2, logb :] Fonctions logarithmes, de Doubles et Floats.
-\item[cos, cosh, sin, sinh, tan, tanh, acos, acosh, asin, asinh, atan, atanh, atan2 :] Les fonctions trigonométriques.
-\item[erf, erfc, tgamma :] Fonctions mathématiques particulières.
+\item[ceil, floor, round, trunc :]
+Arrondis respectif, au nombre entier supérieur, inférier, le plus proche et vers 0. Prend un flottant (Double ou Float), et renvoie un nombre du \emph{même type}.
+\item[abs, fabs :]
+Cette bonne vieille fonction valeur absolue (Int et Double ou Float), renvoie un nombre positif égal à plus ou moins le paramètre en entrée.
+\item[sqrt, cbrt :]
+Racines carrée et cubique.
+\item[pow :]
+La fonction puissance, prend deux paramètre Double ou Float $x$ et $a$, et renvoie $x^{a}$. % Penser à faire un TP Opérateur **
+\item[exp, exp2, expm1 :]
+Exponentielles d'un Double ou d'un Float
+\item[log, log10, log1p, log2, logb :]
+Fonctions logarithmes, de Doubles et Floats.
+\item[cos, cosh, sin, sinh, tan, tanh, acos, acosh, asin, asinh, atan, atanh, atan2 :]
+Les fonctions\\
+trigonométriques, elles sont nombreuses et je ne les détaillerai pas ici.
+\item[erf, erfc, tgamma :]
+Fonctions mathématiques particulières.
 \end{description}
 Cette description sera peut-être encore étoffée.
