Minor additions to Variables
Warns against leading 0 and _ in numbers.

--- a/P1-LesBasesImperatives/CH3-LesVariables/CH3-LesVariables.tex
+++ b/P1-LesBasesImperatives/CH3-LesVariables/CH3-LesVariables.tex
@@ -1,4 +1,4 @@
-\input{../../Conf} % Configuration, includig document class.
+\input{../../Conf} % Configuration, including document class.
 
 \title{\TSwiftTitle{} --- Chapitre 3}
 
