Adds a conclusion to Chapter 3.

--- a/P1-LesBasesImperatives/CH3-LesVariables/Chapter.tex
+++ b/P1-LesBasesImperatives/CH3-LesVariables/Chapter.tex
@@ -136,3 +136,15 @@ pi = 3.1416 // Erreur !
 Du fait de cette déclaration, le compilateur peut d'une part vous prémunir d'une erreur, et
 d'autre part réaliser des optimisations supplémentaires. Apple vous recommande d'utiliser
 des constantes en priorité, et de ne déclarer comme variable que ce qui doit l'être.
+\section*{Conclusion}
+\phantomsection
+\addcontentsline{toc}{section}{Conclusion}
+Dans cette partie vous avez appris :
+\begin{itemize}
+\item Ce qu'était une variable.
+\item Qu'il existe plusieurs types de variables.
+\item Comment déclarer une variable entière
+\item comment déclarer un nombre à virgule.
+\item Comment changer la valeur d'un variable.
+\item Ce qu'est une constante.
+\end{itemize}
