Answers a question, asked in the tutorial.

--- a/P1-LesBasesImperatives/CH3-LesVariables/Chapter.tex
+++ b/P1-LesBasesImperatives/CH3-LesVariables/Chapter.tex
@@ -68,6 +68,9 @@ var age_du_pitaine : UInt8  = 42 // Question ? Quel est l'age maximal du capitai
 Le caractère \verb":" permet d'introduire une \emph{annotation de type}, tandis que \verb"UInt8" correspond au type d'entier choisi.
 
 Remarquez que Swift est ici plutôt agréable à utiliser puisqu'il ne nous oblige pas à lui préciser le type lorsque la réponse est évidente, mais nous permet d'être plus précis si on en a besoin.
+\paragraph{L'age maximal du capitaine est :}
+255 ans.
+C'est parfaitement approprié, puisque c'est le type le plus proche qui soit non signé (positif), et qui ai la plage la moins grande possible toute les valeurs possibles.
 \subsection{La structure générale}
 La structure générale est la suivante, ou les parties entre crochets peuvent être absente, mais pas toute les deux.
 \begin{listing}[h]
