Adds conclusions and exercices to Ch. Arithmetics
Still lacking correction.

--- a/P1-LesBasesImperatives/CH4-Arithmetique/Chapter.tex
+++ b/P1-LesBasesImperatives/CH4-Arithmetique/Chapter.tex
@@ -104,7 +104,8 @@ Pour le matheux : \emph{Une fonction associe à tout élément d'un ensemble de 
 Pour le programmeur, une fonction c'est donc une sorte de boite noire, à laquelle on donne à manger des paramètres, \emph{de types bien définis}, et qui renvoi une valeur (ou rien du tout).
 
 Une fonction sert à réutiliser un bout de code sans avoir à le recopier à chaque fois, et permet de ne pas avoir à savoir comment cela fonctionne.
-On reviendra à l'utilité du découpage du code dans un chapitre ultérieur.
+On reviendra à l'utilité du découpage du code dans un chapitre ultérieur,
+ainsi que sur un usage plus avancé des fonctions.
 
 L'exemple que vous avez déja vu est la fonction \mintinline{swift}{println}, qui affiche une ligne de texte. Les conversion de type sont aussi à des fonctions.
 
@@ -152,3 +153,27 @@ trigonométriques, elles sont nombreuses et je ne les détaillerai pas ici.
 Fonctions mathématiques particulières.
 \end{description}
 Cette description sera peut-être encore étoffée.
+\section*{Conclusion}
+\phantomsection
+\addcontentsline{toc}{section}{Conclusion}
+Dans cette partie vous avez appris :
+\begin{itemize}
+\item À faire calculer votre ordinateur.
+\item ce qu'est le modulo pour un informaticien.
+\item Ce que sont le priorités.
+\item Ce qu'est (en gros) une fonction et comment l'utiliser
+\end{itemize}
+\section*{Exercices}
+\phantomsection
+\addcontentsline{toc}{section}{Exercices}
+\subsection{Des heures, minutes, secondes vers les secondes}
+Donnez vous trois variables contenant des heures des minutes et des secondes
+et faites calculer à votre ordinateur le nombre de secondes que cela fait.
+
+
+\subsection{Des secondes vers les heures, minutes, secondes}
+Essayez d'écrire un code qui à partir d'une durée en seconde la transforme en (jours,) heures, minutes et secondes, soit l'inverse de l'exercice précédent.
+
+%\section*{Correction}
+%\phantomsection
+%\addcontentsline{toc}{section}{Correction}
