Fixes critical bug.

--- a/P1-LesBasesImperatives/CH8-LesBoucles/Chapter.tex
+++ b/P1-LesBasesImperatives/CH8-LesBoucles/Chapter.tex
@@ -40,7 +40,8 @@ do {
 } while !l_utilisateur_veut_quitter
 // L'utilisateur veut quitter.
 // On fait le ménage et on quitte.
-\end{minted}Avec une boucle Do While}
+\end{minted}
+\caption{Avec une boucle Do While}
 \end{listing}
 
 \section{Énumérons des entiers, la boucle for in}
