--- a/TutorielSwift.tex
+++ b/TutorielSwift.tex
@@ -20,9 +20,11 @@ Free Documentation License''.
 
 Il vous est donnée la permission de reproduire redistribuer et/ou modifier ce document selon les termes de la GNU Free Documentation Licence, Version 1.3 ou ultérieur, publiée par la Free Software Foundation; avec aucune section invariante, aucun texte de couverture et aucun text de quatrième de couverture.
 Un copie de cette licence est incluse dans l'appendice intitulé <<GNU Free Documentation License>>.
+
+\input{Preface}
+
 \tableofcontents
 
-%TODO : Preface.
 
 \mainmatter
 \input{\TSwiftRoot/P1-LesBasesImperatives/Part}
