--- a/Conf.tex
+++ b/Conf.tex
@@ -1,8 +1,8 @@
 %Configuration options.
 \documentclass[11pt,a4paper,oneside]{book}
 \usepackage[utf8]{inputenc}
-\usepackage[french, english]{babel}
-\selectlanguage{french}
+\usepackage[english, francais]{babel}
+\selectlanguage{francais}
 \usepackage{fontspec} % Required by french.
 %\usepackage[T1]{fontenc}
 \usepackage{mathtools}
