Revision of Chapter 1
Révision du premier chapitre.

--- a/P1-LesBasesImperatives/CH1-AvantDeCommencer/CH1-AvantDeCommencer.tex
+++ b/P1-LesBasesImperatives/CH1-AvantDeCommencer/CH1-AvantDeCommencer.tex
@@ -2,7 +2,8 @@
 
 \title{\TSwiftTitle{} --- Chapitre 1}
 
-\newcommand{\TSwiftRoot}[0]{../..} % This command is used to make sure the sub imports don't fail in subfolders.
+\newcommand{\TSwiftRoot}[0]{../..}
+% This command is used to make sure the sub imports don't fail in subfolders.
 
 \begin{document}
 
