New chapters : Standard Input and first Practice chapter.
The former includes use of my SwiftInput Library
The latter is a plus or minus game.

--- a/P1-LesBasesImperatives/Part.tex
+++ b/P1-LesBasesImperatives/Part.tex
@@ -11,3 +11,5 @@ fonctionnelle et acquérir les bases de l’algorithmie.
 \input{\TSwiftRoot/P1-LesBasesImperatives/CH6-LesBooleens/Chapter}
 \input{\TSwiftRoot/P1-LesBasesImperatives/CH7-LesConditions/Chapter}
 \input{\TSwiftRoot/P1-LesBasesImperatives/CH8-LesBoucles/Chapter}
+\input{\TSwiftRoot/P1-LesBasesImperatives/CH9-LaConsole/Chapter}
+\input{\TSwiftRoot/P1-LesBasesImperatives/CH10-PlusOuMoins/Chapter}
